Добален Лоадер и пагинатор на странцу клиентов у контролера;

--- a/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.html
@@ -1,7 +1,7 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Проверка Клиента</mat-card-title>
-    <div id="fountainG" hidden>
+    <div id="fountainG" [hidden]="hiddenloader">
       <div id="fountainG_1" class="fountainG"></div>
       <div id="fountainG_2" class="fountainG"></div>
       <div id="fountainG_3" class="fountainG"></div>
