--- a/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.html
@@ -1,6 +1,16 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Проверка План факта</mat-card-title>
+    <div id="fountainG" [hidden]="hiddenloader">
+      <div id="fountainG_1" class="fountainG"></div>
+      <div id="fountainG_2" class="fountainG"></div>
+      <div id="fountainG_3" class="fountainG"></div>
+      <div id="fountainG_4" class="fountainG"></div>
+      <div id="fountainG_5" class="fountainG"></div>
+      <div id="fountainG_6" class="fountainG"></div>
+      <div id="fountainG_7" class="fountainG"></div>
+      <div id="fountainG_8" class="fountainG"></div>
+    </div>
   </mat-card-header>
   <div class="filter clearfix">
     <select [(ngModel)]="numberWeek" (ngModelChange)="changeNumberWeek()">
@@ -21,7 +31,8 @@
     </select>
   </div>
   <mat-card-content>
-    <table mat-table [dataSource]="clientsData">
+    <mat-paginator [pageSizeOptions]="[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]" showFirstLastButtons></mat-paginator>
+    <table mat-table [dataSource]="dataSource" MatSort>
 
       <ng-container matColumnDef="status">
         <th colspan="1" mat-header-cell *matHeaderCellDef></th>
