--- a/WebUI/ClientApp/src/app/сontroler/controler.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.sass
@@ -4,10 +4,10 @@
 
 .logout
     margin-left: auto
-    color: #4771A1
-    padding: 35px 40px
-    height: 130px !important
-    background-color: #f1fbfe
+    color: #3897da
+    padding: 17px 22px
+    height: 90px !important
+    background-color: white
     i
         display: inline-block
         margin-left: 60px
@@ -16,11 +16,24 @@
         border-radius: 99px
         cursor: pointer
 .mat-toolbar-row, .mat-toolbar-single-row
-    padding-right: 0px
+    padding: 0px
 
 mat-toolbar
-    height: 130px !important
-    background-color: #E2F4FF !important
+    height: 90px !important
+    background-color: #62b4ff !important
+    padding: 0px
 
 nav a.active
-    background-color: #d6f2fa !important
+    background-color: white !important
+    color: #4895e4
+
+nav a
+    color: white 
+    transition: 0.3s
+    border-radius: 30px
+    padding: 10px 25px
+    font-size: 18px
+
+nav a:hover
+    color: #4895e4
+    transition: .6s
