--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
@@ -20,6 +20,7 @@ table
       padding: 10px 15px
       text-align: left
   td
+     background: white
      padding-left: 15px !important
      padding-right: 5px !important
      border: 1px solid #6FACE7
@@ -33,6 +34,7 @@ table
      border: 1px solid #6FACE7
      font-weight: normal
      text-align: center
+     background: #f1f8ff
 
 
 .mat-card
@@ -145,8 +147,8 @@ table
         .workgroup-title
             padding: 20px 25px
             font-size: 18px
-            color: #6FACE7
-            background: #daedfe
+            color: white
+            background: #62b4ff
             border-radius: 20px 20px 0px 0px
             line-height: 1.5
             span
