Убрана таблица Клиенты с сегодняшними звонками больше 2.5 минут, вместо неё добалены выделения на клиентах которым сегодня звонили; Добален счетчик с количеством сегоднишних звонков

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -117,7 +117,7 @@ th
 
 .filter
     margin: 0 20px
-    input, select
+    input, select, p
         display: inline-block 
         width: 365px
         padding: 10px 20px
