--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.sass
@@ -44,7 +44,7 @@
         td
             padding-left: 15px !important
             padding-right: 5px !important
-            border: 1px solid #f7f7f7
+            border: 1px solid #c9dcff
             text-align: center
             white-space:nowrap
             overflow:hidden
@@ -53,11 +53,11 @@
         th 
             padding-left: 15px !important
             padding-right: 5px !important
-            background-color: #fcfcfc
-            border-bottom: 1px solid #f7f7f7
-            color: #b9b9b9
+            background-color: #62b4ff
+            border: 1px solid white
+            color: white
             font-weight: normal
             text-align: center
 
 .manager-effiency
-    padding-bottom: 160px
+    padding-bottom: 40px
