--- a/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.sass
@@ -90,16 +90,15 @@ th
     border-radius: 60px
     max-width: 110px
 .btnAccept
-    background: -moz-linear-gradient(#c4e4ff, #EBFFFF)
-    background: -webkit-gradient(linear, 0 0, 0 100%, from(#c4e4ff), to(#EBFFFF))
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c4e4ff', endColorstr='#EBFFFF')
-    padding: 3px 7px
-    -moz-border-radius: 5px
-    -webkit-border-radius: 5px
-    border-radius: 5px
-    border: 1px solid #c4e4ff
-    font-family: Roboto,"Helvetica Neue",sans-serif
+    background-color: #03a9f4
+    color: #fff
+    transition: 0.3s
+    border-radius: 15px
+    padding: 2px 2px
+    border: none
+    cursor: pointer
     margin-bottom: 5px
+    margin-right: 3px
 .filter
     margin: 0 20px
     text-align: right
