--- a/WebUI/ClientApp/src/app/сontroler/plan-task/dialog/accept-manager-dialog/accept-manager-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/dialog/accept-manager-dialog/accept-manager-dialog.component.sass
@@ -9,10 +9,10 @@
     height: 50px
     border-radius: 100px
     border: none
-    background: rgba(255, 235, 235, 0.91)
+    background: none
     i
         display: inline-block
-        color: #E79B9B
+        color: #03a9f4
 
 .dialog-title
     margin: 
@@ -49,3 +49,13 @@ th
     padding: 0px
     padding-bottom: 20px
 
+.btnAccept
+    background-color: #03a9f4
+    color: #fff
+    transition: 0.3s
+    border-radius: 15px
+    padding: 2px 2px
+    border: none
+    cursor: pointer
+    margin-bottom: 5px
+    margin-right: 3px
