--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -287,3 +287,9 @@ th
     -moz-transform: scale(0.3)
     background-color: rgb(145, 125, 209)
 
+
+.action-circle 
+    height: 15px
+    width: 15px
+    border-radius: 10px
+    margin-bottom: 4px
