--- a/WebUI/ClientApp/src/app/сontroler/plan-task/dialog/accept-manager-dialog/accept-manager-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/dialog/accept-manager-dialog/accept-manager-dialog.component.sass
@@ -59,3 +59,9 @@ th
     cursor: pointer
     margin-bottom: 5px
     margin-right: 3px
+
+.action-circle 
+    height: 15px
+    width: 15px
+    border-radius: 10px
+    margin-bottom: 4px
