--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -18,17 +18,14 @@ table
     table-layout: fixed
 
 td
-    padding-left: 15px !important
-    padding-right: 5px !important
     border-bottom: none
     color: #1C1C1C !important
 
 th 
-    padding-left: 15px !important
-    padding-right: 5px !important
-    background-color: #fcfcfc
+    background-color: #62b4ff
     border-bottom: none
-    color: #000000 !important
+    color: white !important
+    font-size: 13px
 
 
 .mat-card
