--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
@@ -171,6 +171,22 @@ table
                     border: 2px solid #95CCFF
                     color: #3EA1FF
 
+.blockCalendar
+    align-items: center
+    display: flex
+    position: absolute
+    right: 10px
+    z-index: 10
+    background-color: white
+    .calendar
+        width: 300px
+    .btnSort
+        width: 150px
+        border-radius: 20px
+        border: 1px solid #d4f3ff
+    .btnSort:focus 
+        background-color: #f2fbff
+
 #fountainG
   width: 186px
   height: 22px
